--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>Cameron Pittman loves web development.</strong> But what he really loves is teaching others about web development, so he made this "simple template" in desperate need of performance optimizations for us Udacity folk to mess around with and make more performant. Useful, isn't it? 
       </div>
 
       <div class="content">
