--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- See the bottom of a page for an experimental font link that isn't render-blocking. -->
+    <!-- Explanation at http://stackoverflow.com/questions/25230264/how-to-keep-css-from-render-blocking-my-website -->
+    <!--link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" -->
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
@@ -21,7 +22,7 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -67,5 +68,9 @@
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
+
+    <style scoped>
+    @import "//fonts.googleapis.com/css?family=Open+Sans:400,700"
+    </style>
   </body>
 </html>
