--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <a href="/"><img src="img/profilepic.jpg" height="70" width="70"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -99,29 +99,29 @@
       <div class="hero">
         <strong>Cameron Pittman loves web development.</strong> But what he really loves is teaching others about web development, so he made this "simple template" in desperate need of performance optimizations for us Udacity folk to mess around with and make more performant. Useful, isn't it? 
       </div>
-
+      <!-- Shame on you for using non-local content, Cameron! Replaced with locals. -->
       <div class="content">
         <ul>
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+            <img src="img/2048_thumb.jpg" width="100" height="50">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
+            <img src="img/performanceopt_thumb.jpg" width="100" height="62">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
+            <img src="img/mobilewebdev_thumb.jpg" width="100" height="61">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
-
+          <!--Using width and height HTML instead of inline CSS.-->
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria_thumb.jpg">
+            <img src="views/images/pizzeria_thumb.jpg" width="102" height="77">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
