Pizzeria image optimization
Shrunk it down.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!--link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" -->
 
     <!-- Inlining your CSS for performance comes at the expensive of intelligibility and style. -->
-    <style> html {
+    <!--style.css-->
+    <style> 
+      html {
         font-size: 100%;
         overflow-y: scroll;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -62,6 +64,7 @@
         header p { padding-left: 4.5em;}
       }
     </style>
+    <!--print.css-->
     <style>
     @media print {
       * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
@@ -85,7 +88,10 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
+
     <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <!--Forced synchronous layout error-->
+
     <script async src="js/perfmatters.js"></script>
   </head>
 
