Image responsiveness commit
Width adjustment is now "critical"

--- a/project-2048.html
+++ b/project-2048.html
@@ -31,6 +31,8 @@
       .content { padding: 1em 1em; }
       .content li { list-style-type: none; font-size: 1.1em;}
 
+      img { border: 0; max-width: 100%; }
+      
       /* Smartphones (portrait) */
       @media only screen and (max-width: 480px) {
         body { font-size: 12px;}
