--- a/project-webperf.html
+++ b/project-webperf.html
@@ -23,7 +23,8 @@
         border-bottom: 1px solid #ccc;
         border-top: 1px solid #ccc;
       }
-
+      img { border: 0; max-width: 100%; }
+      
       .content { padding: 1em 1em; }
       .content li { list-style-type: none; font-size: 1.1em;}
 
@@ -104,6 +105,6 @@
     <style scoped>
     @import "//fonts.googleapis.com/css?family=Open+Sans:400,700"
     </style>
-    
+
   </body>
 </html>
