--- a/project-mobile.html
+++ b/project-mobile.html
@@ -7,11 +7,49 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pitman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
+    <!--Only the critical bits of style.css, ideally. Probably could cut a decent swathe out.-->
+    <style> 
+      html {
+        font-size: 100%;
+        overflow-y: scroll;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: none;
+      }
 
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+      header, footer, .container { max-width: 45em; margin: 0 auto; }
+
+      .hero { padding: 2em; background-color: #f8f8f8; font-size:1.2em;
+        border-bottom: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+      }
+      img { border: 0; max-width: 100%; }
+      
+      .content { padding: 1em 1em; }
+      .content li { list-style-type: none; font-size: 1.1em;}
+
+      /* Smartphones (portrait) */
+      @media only screen and (max-width: 480px) {
+        body { font-size: 12px;}
+        header p { padding-left: 4.5em;}
+      }
+    </style>
+
+    <!--print.css ... maybe this should be optimized too?-->
+    <style>
+    @media print {
+      * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+      a, a:visited { color: #444 !important; text-decoration: underline; }
+      a[href]:after { content: " (" attr(href) ")"; }
+      tr, img { page-break-inside: avoid; }
+      img { max-width: 100% !important; }
+      @page { margin: 0.5cm; }
+      p, h2, h3 { orphans: 3; widows: 3; }
+      h2, h3{ page-break-after: avoid; }
+      }
+    </style>
+    <!-- link href="css/style.css" rel="stylesheet"-->
+    <!-- link href="css/print.css" rel="stylesheet"-->
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -21,7 +59,7 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -49,5 +87,22 @@
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
+
+    <script>
+      var cb = function() {
+        var l = document.createElement('link'); l.rel = 'stylesheet';
+        l.href = 'css/style.css';
+        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+          webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(cb);
+      else window.addEventListener('load', cb);
+    </script>
+
+    <style scoped>
+    @import "//fonts.googleapis.com/css?family=Open+Sans:400,700"
+    </style>
+    
   </body>
 </html>
